2017-11-07  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.js:
	Change time to send requestRestorePopupState message.

	* tryXpath/scripts/try_xpath_content.js: 
	Define findFrameElement function.
	Set "message" handler to window.

2017-11-06  larissa9839  <larissa9839@gmail.com>

	* tryXpath/background/try_xpath_background.js:
	Modify genericListener.listeners.updateCss function.
	Modify genericListener.listeners.requestSetContentInfo function.

	* tryXpath/scripts/try_xpath_content.js:
	Set initial value of prevMsg.

	* tryXpath/popup/popup.html (Results):
	Add some buttons.
	Add show-previous-results button.

	* tryXpath/popup/popup.js:
	Modify sendToSpecifiedFrame function.
	Modify sendExecute function.
	Add some handlers.

2017-11-05  larissa9839  <larissa9839@gmail.com>

	* tryXpath/pages/show_all_results.html :
	Add some elements related to "frame-id" id.

	* tryXpath/pages/show_all_results.js:
	Define relatedFrameId variable;

	* tryXpath/background/try_xpath_background.js:
	Modify genericListener.listeners.showAllResults function.

	* tryXpath/popup/popup.js:
	Define resultsFrameId variable.
	Modify the handler related to set-style element.
	Define invalidFrameId constants.
	Define relatedFrameId variable.

	* tryXpath/popup/popup.html (Results):
	Add a div element.

	* tryXpath/popup/popup.js:
	Define genericListener.listeners.addFrameId function.
	Modify getSpecifiedFrameId funciton.
	Modify collectPopupState function.
	Modify genericListener.listeners.restorePopupState function.
	Modify sendExecute function.

	* tryXpath/popup/popup.html (Main): 
	Rename id. "frameid-expression" -> "frame-id-expression"

	* tryXpath/popup/popup.js:
	Rename frameidExpression -> frameIdExpression
	Rename id. "frameid-expression" -> "frame-id-expression"

	* tryXpath/popup/popup.html (Main):
	Add a select element.

	* tryXpath/popup/popup.js:
	Define getSpecifiedFrameId function.
	Define invalidTabId, invalidExecutionId constans.
	Define showError function.
